[gd_scene load_steps=16 format=2]

[ext_resource path="res://Camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://select.gd" type="Script" id=2]
[ext_resource path="res://Untitled79_20210203220420.png" type="Texture" id=3]
[ext_resource path="res://green.tres" type="Material" id=4]
[ext_resource path="res://Panel.gd" type="Script" id=5]
[ext_resource path="res://X.png" type="Texture" id=6]
[ext_resource path="res://round.png" type="Texture" id=7]
[ext_resource path="res://good.png" type="Texture" id=8]
[ext_resource path="res://coin.png" type="Texture" id=9]
[ext_resource path="res://delete.png" type="Texture" id=10]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.101961, 0.517647, 0.0862745, 1 )

[sub_resource type="PlaneMesh" id=4]
material = SubResource( 3 )

[sub_resource type="Skin" id=5]

[node name="Spatial" type="Spatial"]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="select" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 0.5, 0, 0, 0, 2, 0, 1, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Area" type="Area" parent="select"]
transform = Transform( 4.19012, 0, 0, 0, 2.2477, 0, 0, 0, 4.64612, 0.0650184, -0.0788417, 0 )

[node name="CollisionShape" type="CollisionShape" parent="select/Area"]
transform = Transform( -0.194335, 0, 0, 0, 0.503394, 0, 0, 0, -0.175511, -0.0123405, 0, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 23, 0, 0, 0, 1, 0, 0, 0, 23, 0.0571287, 0.338936, 0.352431 )
mesh = SubResource( 4 )
skin = SubResource( 5 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 1, 4 )

[node name="CameraMovement" parent="." instance=ExtResource( 1 )]

[node name="container" type="MeshInstance" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 57.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="Control"]
visible = false
margin_left = 2.0
margin_top = 79.0
margin_right = 138.0
margin_bottom = 498.0
rect_pivot_offset = Vector2( 654.442, 50.3287 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test" type="Button" parent="Control/Panel3"]
anchor_top = 0.037
anchor_right = 0.91
anchor_bottom = 0.167
margin_left = 9.0
margin_top = 0.0139999
margin_bottom = -0.126003
rect_pivot_offset = Vector2( -337.942, 128.365 )
text = "Rezidential"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
visible = false
margin_left = -2.0
margin_top = 2.0
margin_right = 1024.0
margin_bottom = 62.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control/Panel"]
anchor_left = 0.939
anchor_top = 0.123
anchor_right = 0.992
anchor_bottom = 0.769
margin_left = -0.231201
margin_top = 0.00499916
margin_right = -10.7681
margin_bottom = 0.0150185
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel/Button2"]
position = Vector2( 22.1328, 19.1342 )
scale = Vector2( 0.061, 0.061 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="Control/Panel"]
anchor_left = 0.832
anchor_top = 0.128
anchor_right = 0.875
anchor_bottom = 0.774
margin_left = -11.1719
margin_top = -0.00200748
margin_right = -11.4189
margin_bottom = 0.00799179
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel/Button"]
position = Vector2( 23.2907, 20.9791 )
scale = Vector2( 0.0894732, 0.0838004 )
texture = ExtResource( 7 )

[node name="Button3" type="Button" parent="Control/Panel"]
anchor_left = 0.881
anchor_top = 0.127
anchor_right = 0.925
anchor_bottom = 0.774
margin_left = -0.327698
margin_top = 0.02773
margin_right = -1.6037
margin_bottom = -0.0272713
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel/Button3"]
position = Vector2( 22.7344, 19.5081 )
scale = Vector2( 0.05793, 0.0781554 )
texture = ExtResource( 8 )

[node name="Panel4" type="Panel" parent="Control"]
visible = false
margin_left = -2.0
margin_top = 1.4054
margin_right = 1024.0
margin_bottom = 61.4054
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no" type="Button" parent="Control/Panel4"]
anchor_left = 0.939
anchor_top = 0.123
anchor_right = 0.992
anchor_bottom = 0.769
margin_left = -0.231201
margin_top = 0.00499916
margin_right = -10.7681
margin_bottom = 0.0150185
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel4/no"]
position = Vector2( 22.1328, 19.1342 )
scale = Vector2( 0.061, 0.061 )
texture = ExtResource( 6 )

[node name="ok" type="Button" parent="Control/Panel4"]
anchor_left = 0.881
anchor_top = 0.127
anchor_right = 0.925
anchor_bottom = 0.774
margin_left = -0.327698
margin_top = 0.02773
margin_right = -1.6037
margin_bottom = -0.0272713
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel4/ok"]
position = Vector2( 22.7344, 19.5081 )
scale = Vector2( 0.05793, 0.0781554 )
texture = ExtResource( 8 )

[node name="Panel2" type="Panel" parent="Control"]
margin_left = -2.33163
margin_top = 552.36
margin_right = 1024.67
margin_bottom = 601.36
rect_pivot_offset = Vector2( 654.442, 50.3287 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="build" type="Button" parent="Control/Panel2"]
anchor_left = 0.012
anchor_top = 0.071
anchor_right = 0.055
anchor_bottom = 0.928
margin_left = 0.387239
margin_top = -0.00707626
margin_right = 0.398239
margin_bottom = -7.24792e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel2/build"]
position = Vector2( 22.3843, 20.4535 )
scale = Vector2( 0.0543474, 0.0521967 )
texture = ExtResource( 3 )

[node name="delete" type="Button" parent="Control/Panel2"]
anchor_left = 0.012
anchor_top = 0.071
anchor_right = 0.055
anchor_bottom = 0.928
margin_left = 54.3872
margin_top = -0.00707626
margin_right = 54.3982
margin_bottom = -7.24792e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel2/delete"]
position = Vector2( 22.3843, 20.4535 )
scale = Vector2( 0.0543474, 0.0521967 )
texture = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Control/Panel2"]
position = Vector2( 134.636, 25.7885 )
scale = Vector2( 0.354363, 0.35252 )
texture = ExtResource( 9 )

[node name="label" type="RichTextLabel" parent="Control/Panel2"]
anchor_left = 0.156
anchor_top = 0.387
anchor_right = 0.263
anchor_bottom = 0.617
margin_left = 0.204605
margin_top = 0.00866318
margin_right = -0.363434
margin_bottom = -0.0113373
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="select/Area" to="select" method="_on_Area_area_entered"]
[connection signal="area_exited" from="select/Area" to="select" method="_on_Area_area_exited"]
[connection signal="pressed" from="Control/Panel3/test" to="select" method="_on_test_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Control/Panel/Button2" to="select" method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Panel/Button" to="select" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Panel/Button3" to="select" method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Panel4/no" to="select" method="_on_no_pressed"]
[connection signal="pressed" from="Control/Panel4/ok" to="select" method="_on_ok_pressed"]
[connection signal="pressed" from="Control/Panel2/build" to="select" method="_on_build_pressed"]
[connection signal="pressed" from="Control/Panel2/delete" to="select" method="_on_delete_pressed"]
